# 3rdPartyStuff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_android.sh  build_vs.sh
cmake/: vcpkg_apply_patches.cmake
source/patch/yaml-cpp/: yaml-cpp_p1.patch
